# wasm-serde

./: Cargo.toml  LICENSE  README.md
app/: Cargo.toml
app/src/: lib.rs
app/wit/: world.wit
benches/: bench.rs
benches/wasm/: Cargo.toml
benches/wasm/component-bundle/: Cargo.toml
benches/wasm/component-bundle/src/: lib.rs
benches/wasm/component-codec-import/: Cargo.toml
benches/wasm/component-codec-import/src/: lib.rs
benches/wasm/module-bundle/: Cargo.toml
benches/wasm/module-bundle/src/: lib.rs
benches/wasm/src/: lib.rs
benches/wit/: world.wit
cbor/: Cargo.toml
cbor/src/: lib.rs
examples/: runtime.rs
examples/app/: Cargo.toml
examples/runtime/: Cargo.toml
examples/runtime/src/: main.rs
json/: Cargo.toml
json/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
src/: bindings.rs  lib.rs  num.rs
tests/: json.rs  main.rs
tests/de/: json.rs  toml.rs
tests/ser/: json.rs  mod.rs  toml.rs
toml/: Cargo.toml
toml/src/: lib.rs
wit/: deps.toml  world.wit
