[package]
name = "wasm-serde"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cbor", "json", "toml", "examples/app"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
wit-bindgen = { workspace = true }

[workspace.dependencies]
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_core = "1"
serde_json = "1"
toml = "0.9"
wit-bindgen = "0.48"

[dev-dependencies]
anyhow = "1"
wasmtime = "38"
wit-component = "0.239"
