[package]
description = "serde, componentized"
name = "wasm-serde"
version = "0.2.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
categories = ["wasm"]
edition = "2024"
homepage = "https://github.com/cosmonic-labs/wasm-serde"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/cosmonic-labs/wasm-serde"

[workspace]
members = ["cbor", "json", "toml", "examples/app"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
wit-bindgen = { workspace = true }

[workspace.dependencies]
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_core = "1"
serde_json = "1"
toml = "0.9"
wit-bindgen = "0.48"

[dev-dependencies]
anyhow = "1"
wasmtime = "38"
wit-component = "0.239"
