[package]
name = "bench"
edition = "2024"

[dependencies]
serde = { workspace = true }
wit-bindgen = { workspace = true }

[workspace]
members = ["component-bundle", "component-codec-import", "module-bundle"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.46"
